2017-04-07  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.36 released.

	* ebuild-mode-keywords.el (ebuild-mode-keywords-*): Regenerated.

	* ebuild-mode.el (ebuild-mode-make-keywords-list): Call regexp-opt
	without duplicates in its argument list.

2017-03-31  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-mode-before-save):
	Call ebuild-mode-update-copyright only once per buffer.

2017-03-17  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.35 released.

2017-03-08  Ulrich Müller  <ulm@gentoo.org>

	* gentoo-newsitem-mode.el (gentoo-newsitem-insert-skeleton):
	Account for news item format 2.0.
	(gentoo-newsitem-format-list): New variable.

2017-03-06  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.34 released.

	* ebuild-mode-keywords.el (ebuild-mode-keywords-*): Regenerated.

2017-03-04  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-mode-eapi-list): New custom variable.
	(ebuild-mode-insert-skeleton): Use it in a completing-read.

	* ebuild-mode.el (ebuild-mode-protocols-homepage)
	(ebuild-mode-protocols-src_uri): New variables.
	(ebuild-mode-insert-skeleton): Add https:// to completions
	for HOMEPAGE and SRC_URI.

	* ebuild-mode.el (ebuild-mode-update-copyright): Modify the buffer
	only if necessary. Warn about equal first and last year.

2017-02-28  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.33 released.

	* ebuild-mode.el (ebuild-mode-update-copyright)
	(ebuild-mode-delete-cvs-line): New custom variables, default to t.
	(ebuild-mode-copyright-regexp, ebuild-mode-cvs-header-regexp):
	New variables.
	(ebuild-mode-update-copyright, ebuild-mode-delete-cvs-line):
	New functions.
	(ebuild-mode-before-save): Update copyright years and remove CVS
	Id or Header line, when customised to do so, respectively.

2017-02-27  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-mode): New customisation group.
	(ebuild-mode-portdir): Change to custom variable.
	(ebuild-mode-fix-whitespace): New custom variable, defaults to t.