@@ -1,5 +1,8 @@
 2017-04-07  Ulrich Müller  <ulm@gentoo.org>
 
+	* ebuild-mode.el (ebuild-mode-make-keywords-list): XEmacs 21.4
+	doesn't have delete-dups, use delete-duplicates instead.
+
 	* Version 1.36 released.
 
 	* ebuild-mode-keywords.el (ebuild-mode-keywords-*): Regenerated.
